--- a/inference.ipynb
+++ b/inference.ipynb
@@ -190,6 +190,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c579c155",
+   "metadata": {},
+   "source": [
+    "**Model tidak disertakan secara langsung dalam repositori ini karena ukurannya yang besar. Untuk menggunakan atau mencoba model, dapat langsung memuat model dari Hugging Face Hub menggunakan transformers atau sentence-transformers dengan repo ID yang tersedia.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9079de7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tokenizer_distilbert_finetuned = AutoTokenizer.from_pretrained(\"PetaniHandal/distilbert-base-id-finetuned-sentiment\")\n",
+    "#model_distilbert_finetuned = AutoModelForSequenceClassification.from_pretrained(\n",
+    "#    \"PetaniHandal/distilbert-base-id-finetuned-sentiment\",\n",
+    "#    num_labels=3\n",
+    "#)\n",
+    "#model_distilbert_finetuned.to(device)\n",
+    "#model_distilbert_finetuned.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "041ddfdd",
    "metadata": {},
    "source": [
