--- a/preprocessing_dan_skema_pelatihan_1_2.ipynb
+++ b/preprocessing_dan_skema_pelatihan_1_2.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3e594f1f",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('ulasan_aplikasi_gojek_100k.csv')\n",
+    "df = pd.read_csv('data/ulasan_aplikasi_gojek_100k.csv')\n",
     "df"
    ]
   },
@@ -1218,12 +1218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "49c58c14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_csv('ulasan_aplikasi_gojek_clean_100k.csv', index=False)"
+    "df_clean.to_csv('data/ulasan_aplikasi_gojek_clean_100k.csv', index=False)"
    ]
   },
   {
@@ -1667,7 +1667,7 @@
    "id": "811ee3cb",
    "metadata": {},
    "source": [
-    "# Skema pelatihan 3 di notebook yang lain, dipisahkan dengan alasan efisiensi dan keterbacaan kode"
+    "# Skema pelatihan 3 di notebook yang lain, dipisahkan dengan alasan kompleksitas modelling yang tinggi"
    ]
   }
  ],
