--- a/skema_pelatihan_3.ipynb
+++ b/skema_pelatihan_3.ipynb
@@ -99,13 +99,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "P6O880fap0XE"
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('ulasan_aplikasi_gojek_clean_100k.csv',on_bad_lines='skip')"
+        "df = pd.read_csv('data/ulasan_aplikasi_gojek_clean_100k.csv',on_bad_lines='skip')"
       ]
     },
     {
@@ -509,11 +509,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "dataset.to_pandas()[['processed_bert', 'predicted_label']].to_csv('dataset_labeling_with_model_100k.csv', index=False)"
+        "dataset.to_pandas()[['processed_bert', 'predicted_label']].to_csv('data/dataset_labeling_with_model_100k.csv', index=False)"
       ]
     },
     {
@@ -525,11 +525,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.read_csv('dataset_labeling_with_model_100k.csv')"
+        "df = pd.read_csv('data/dataset_labeling_with_model_100k.csv')"
       ]
     },
     {
@@ -953,10 +953,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Menggunakan focal loss untuk handle imbalance data\n",
         "class FocalLoss(nn.Module):\n",
         "    def __init__(self, gamma=2, weight=None):\n",
         "        super(FocalLoss, self).__init__()\n",
@@ -1241,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1289,20 +1290,16 @@
         "\n",
         "            inputs, masks, labels = inputs.to(device), masks.to(device), labels.to(device)\n",
         "            \n",
-        "            # Predicting\n",
         "            outputs = model(input_ids=inputs, attention_mask=masks)\n",
         "            logits = outputs.logits\n",
         "            \n",
-        "            # Calculate loss\n",
         "            loss = criterion(logits, labels)\n",
         "            all_loss.append(loss.item())\n",
         "            \n",
-        "            # save predictions and labels\n",
         "            _, preds = torch.max(logits, dim=1)\n",
         "            all_preds.extend(preds.cpu().numpy())\n",
         "            all_labels.extend(labels.cpu().numpy())\n",
         "    \n",
-        "    # calculate metrics\n",
         "    avg_loss = sum(all_loss) / len(all_loss)\n",
         "    accuracy = accuracy_score(all_labels, all_preds)\n",
         "    report = classification_report(all_labels, all_preds)\n",
@@ -1315,11 +1312,9 @@
         "    print(\"Confusion Matrix:\")\n",
         "    print(cm)\n",
         "\n",
-        "# Pastikan model dan test_dataloader sudah ada\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "model = model.to(device)  # Pastikan model berada di device yang benar\n",
+        "model = model.to(device)  \n",
         "\n",
-        "# Evaluasi model\n",
         "evaluate_model(model, test_loader, device)\n",
         "\n"
       ]
